fix: mx-bridge -> mx_bridge

--- a/config/boards/shields/mx_bridge/mx_bridge.zmk.yml
+++ b/config/boards/shields/mx_bridge/mx_bridge.zmk.yml
@@ -1,5 +1,5 @@
 file_format: "1"
-id: mx-bridge
+id: mx_bridge
 name: MX Bridge
 type: shield
 url: https://github.com/inverseTrig/ergogen-keyboards/mx-bridge
