--- a/config/west.yml
+++ b/config/west.yml
@@ -1,16 +1,16 @@
 manifest:
   remotes:
     - name: zmkfirmware
-      url-base: https://github.com/zmkfirmware
-    - name: englmaxi
-      url-base: https://github.com/englmaxi
+      url-base: https://github.com/petejohanson
+    - name: badjeff
+      url-base: https://github.com/badjeff
   projects:
     - name: zmk
       remote: zmkfirmware
-      revision: main
+      revision: feat/pointers-move-scroll
       import: app/west.yml
-    - name: zmk-dongle-display
-      remote: englmaxi
+    - name: zmk-pmw3610-driver
+      remote: badjeff
       revision: main
   self:
     path: config
