--- a/config/boards/shields/mx_bridge/mx_bridge.zmk.yml
+++ b/config/boards/shields/mx_bridge/mx_bridge.zmk.yml
@@ -6,6 +6,7 @@ url: https://github.com/inverseTrig/ergogen-keyboards/mx-bridge
 requires: [pro_micro]
 features:
   - keys
+  - pointer
 siblings:
   - mx_bridge_left
   - mx_bridge_right
