--- a/config/boards/shields/mx_bridge/mx_bridge_central_dongle.conf
+++ b/config/boards/shields/mx_bridge/mx_bridge_central_dongle.conf
@@ -1,3 +1,5 @@
+CONFIG_ZMK_KEYBOARD_NAME="MX Bridge"
+
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=2
@@ -20,3 +22,15 @@ CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_IDLE_TIMEOUT=60000
 CONFIG_BT_BAS=n
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
+
+CONFIG_ZMK_BATTERY_REPORT_INTERVAL=60
+
+CONFIG_ZMK_MOUSE=y
+CONFIG_PINCTRL=y
+CONFIG_SPI=y
+CONFIG_INPUT=y
+CONFIG_ZMK_EXT_POWER=y
+CONFIG_PMW3610=y
+CONFIG_PMW3610_SWAP_XY=y
+CONFIG_PMW3610_INVERT_X=y
+CONFIG_PMW3610_INVERT_Y=y
