--- a/config/boards/shields/mx_bridge/mx_bridge_central_left.conf
+++ b/config/boards/shields/mx_bridge/mx_bridge_central_left.conf
@@ -8,3 +8,23 @@ CONFIG_BT_MAX_PAIRED=4
 # battery reporting
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
+
+CONFIG_ZMK_BATTERY_REPORT_INTERVAL=60
+
+CONFIG_ZMK_SLEEP=y
+
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
+
+CONFIG_ZMK_IDLE_TIMEOUT=15000
+
+CONFIG_ZMK_KEYBOARD_NAME="MX Bridge"
+CONFIG_ZMK_MOUSE=y
+CONFIG_PINCTRL=y
+CONFIG_SPI=y
+CONFIG_INPUT=y
+CONFIG_ZMK_EXT_POWER=y
+CONFIG_PMW3610=y
+CONFIG_PMW3610_SWAP_XY=y
+CONFIG_PMW3610_INVERT_X=n
+CONFIG_PMW3610_INVERT_Y=n
+CONFIG_PMW3610_REPORT_INTERVAL_MIN=10
