--- a/config/boards/shields/mx_bridge/mx_bridge_peripheral_right.conf
+++ b/config/boards/shields/mx_bridge/mx_bridge_peripheral_right.conf
@@ -9,3 +9,6 @@ CONFIG_PMW3610_SWAP_XY=y
 CONFIG_PMW3610_INVERT_X=y
 CONFIG_PMW3610_INVERT_Y=y
 CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
+
+CONFIG_EC11=y
+CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
