--- a/config/mx_bridge.conf
+++ b/config/mx_bridge.conf
@@ -11,3 +11,6 @@ CONFIG_ZMK_USB_LOGGING=n
 
 CONFIG_ZMK_BATTERY_REPORT_INTERVAL=60
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
+CONFIG_EC11=y
+CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
